opam-version: "2.0"
maintainer: "contact@nomadic-labs.com"
authors: [ "Nomadic Labs" ]
homepage: "https://gitlab.com/nomadic-labs/data-encoding"
bug-reports: "https://gitlab.com/nomadic-labs/data-encoding/issues"
dev-repo: "git+https://gitlab.com/nomadic-labs/data-encoding.git"
license: "MIT"
depends: [
  "ocaml" { >= "4.08" }
  "dune" { >= "1.7" }
  "ezjsonm"
  "zarith"
  "json-data-encoding" { = "0.8" }
  "json-data-encoding-bson" { = "0.8" }
  "alcotest" { with-test }
  "crowbar" { with-test }
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Library of JSON and binary encoding combinators"
