opam-version: "2.0"
maintainer: "contact@nomadic-labs.com"
authors: [ "Nomadic Labs" ]
homepage: "https://gitlab.com/nomadic-labs/data-encoding"
bug-reports: "https://gitlab.com/nomadic-labs/data-encoding/issues"
dev-repo: "git+https://gitlab.com/nomadic-labs/data-encoding.git"
license: "MIT"
depends: [
  "ocaml" { >= "4.10" }
  "dune" { >= "1.11" }
  "ezjsonm"
  "zarith" {>= "1.4"}
  "hex" {>= "1.3.0"}
  "json-data-encoding" { = "0.11" }
  "json-data-encoding-bson" { = "0.11" }
  "alcotest" { with-test }
  "crowbar" { >= "0.2" & with-test }
  "ocamlformat" { = "0.20.1" & with-doc } # not technically a doc dep; modify when with-dev becomes available
  "odoc" { with-doc }
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Library of JSON and binary encoding combinators"
