(executable
 (name main)
 (package teztale)
 (public_name teztale)
 (promote (until-clean))
 (libraries tezos-client-base-unix teztale.lib teztale.archiver)
 (flags
  (:standard -open Tezos_base__TzPervasives -open Tezos_stdlib_unix -open
    Tezos_shell_services -open Tezos_client_base_unix -open
    Tezos_rpc_http_client_unix -open Tezos_rpc_http -open Teztale_lib)))
