(lang dune 3.0)
(formatting (enabled_for ocaml))
(cram enable)
(using ctypes 0.1)
(package (name internal-devtools))
(package (name octez-accuser-PtLimaPt))
(package (name octez-accuser-PtMumbai))
(package (name octez-accuser-alpha))
(package (name octez-alcotezt))
(package (name octez-baker-PtLimaPt))
(package (name octez-baker-PtMumbai))
(package (name octez-baker-alpha))
(package (name octez-bls12-381-hash))
(package (name octez-bls12-381-polynomial))
(package (name octez-bls12-381-signature))
(package (name octez-client))
(package (name octez-codec))
(package (name octez-crawler))
(package (name octez-dac-node))
(package (name octez-dal-node))
(package (name octez-evm-proxy))
(package (name octez-injector))
(package (name octez-mec))
(package (name octez-node))
(package (name octez-node-config))
(package (name octez-polynomial))
(package (name octez-protocol-compiler))
(package (name octez-proxy-server))
(package (name octez-signer))
(package (name octez-smart-rollup-client-PtMumbai))
(package (name octez-smart-rollup-client-alpha))
(package (name octez-smart-rollup-node-PtMumbai))
(package (name octez-smart-rollup-node-alpha))
(package (name octez-smart-rollup-wasm-benchmark)(allow_empty))
(package (name octez-smart-rollup-wasm-benchmark-lib)(allow_empty))
(package (name octez-smart-rollup-wasm-debugger))
(package (name octez-snoop))
(package (name octez-testnet-scenarios))
(package (name octez-tx-rollup-client-PtLimaPt))
(package (name octez-tx-rollup-node-PtLimaPt))
(package (name tezos-015-PtLimaPt-test-helpers))
(package (name tezos-016-PtMumbai-test-helpers))
(package (name tezos-alpha-test-helpers))
(package (name tezos-baking-015-PtLimaPt))
(package (name tezos-baking-015-PtLimaPt-commands))
(package (name tezos-baking-016-PtMumbai))
(package (name tezos-baking-016-PtMumbai-commands))
(package (name tezos-baking-alpha))
(package (name tezos-baking-alpha-commands))
(package (name tezos-base))
(package (name tezos-base-test-helpers))
(package (name tezos-benchmark))
(package (name tezos-benchmark-015-PtLimaPt))
(package (name tezos-benchmark-016-PtMumbai))
(package (name tezos-benchmark-alpha))
(package (name tezos-benchmark-examples))
(package (name tezos-benchmark-tests)(allow_empty))
(package (name tezos-benchmark-type-inference-015-PtLimaPt))
(package (name tezos-benchmark-type-inference-016-PtMumbai))
(package (name tezos-benchmark-type-inference-alpha))
(package (name tezos-benchmarks-proto-015-PtLimaPt))
(package (name tezos-benchmarks-proto-016-PtMumbai))
(package (name tezos-benchmarks-proto-alpha))
(package (name tezos-clic))
(package (name tezos-client-000-Ps9mPmXa))
(package (name tezos-client-001-PtCJ7pwo))
(package (name tezos-client-002-PsYLVpVv))
(package (name tezos-client-003-PsddFKi3))
(package (name tezos-client-004-Pt24m4xi))
(package (name tezos-client-005-PsBabyM1))
(package (name tezos-client-006-PsCARTHA))
(package (name tezos-client-007-PsDELPH1))
(package (name tezos-client-008-PtEdo2Zk))
(package (name tezos-client-009-PsFLoren))
(package (name tezos-client-010-PtGRANAD))
(package (name tezos-client-011-PtHangz2))
(package (name tezos-client-012-Psithaca))
(package (name tezos-client-013-PtJakart))
(package (name tezos-client-014-PtKathma))
(package (name tezos-client-015-PtLimaPt))
(package (name tezos-client-016-PtMumbai))
(package (name tezos-client-alpha))
(package (name tezos-client-base))
(package (name tezos-client-base-unix))
(package (name tezos-client-commands))
(package (name tezos-client-demo-counter))
(package (name tezos-client-genesis))
(package (name tezos-context))
(package (name tezos-context-ops))
(package (name tezos-crypto))
(package (name tezos-crypto-dal))
(package (name tezos-dac-alpha))
(package (name tezos-dac-client-lib))
(package (name tezos-dac-lib))
(package (name tezos-dac-node-lib)(allow_empty))
(package (name tezos-dac-node-lib-test)(allow_empty))
(package (name tezos-dal-016-PtMumbai))
(package (name tezos-dal-alpha))
(package (name tezos-dal-node-lib)(allow_empty))
(package (name tezos-dal-node-services))
(package (name tezos-embedded-protocol-000-Ps9mPmXa))
(package (name tezos-embedded-protocol-001-PtCJ7pwo))
(package (name tezos-embedded-protocol-002-PsYLVpVv))
(package (name tezos-embedded-protocol-003-PsddFKi3))
(package (name tezos-embedded-protocol-004-Pt24m4xi))
(package (name tezos-embedded-protocol-005-PsBABY5H))
(package (name tezos-embedded-protocol-005-PsBabyM1))
(package (name tezos-embedded-protocol-006-PsCARTHA))
(package (name tezos-embedded-protocol-007-PsDELPH1))
(package (name tezos-embedded-protocol-008-PtEdo2Zk))
(package (name tezos-embedded-protocol-008-PtEdoTez))
(package (name tezos-embedded-protocol-009-PsFLoren))
(package (name tezos-embedded-protocol-010-PtGRANAD))
(package (name tezos-embedded-protocol-011-PtHangz2))
(package (name tezos-embedded-protocol-012-Psithaca))
(package (name tezos-embedded-protocol-013-PtJakart))
(package (name tezos-embedded-protocol-014-PtKathma))
(package (name tezos-embedded-protocol-015-PtLimaPt))
(package (name tezos-embedded-protocol-016-PtMumbai))
(package (name tezos-embedded-protocol-alpha))
(package (name tezos-embedded-protocol-demo-counter))
(package (name tezos-embedded-protocol-demo-noops))
(package (name tezos-embedded-protocol-genesis))
(package (name tezos-error-monad))
(package (name tezos-event-logging))
(package (name tezos-event-logging-test-helpers))
(package (name tezos-expect-helper))
(package (name tezos-gossipsub))
(package (name tezos-gossipsub-test)(allow_empty))
(package (name tezos-hacl))
(package (name tezos-injector-015-PtLimaPt))
(package (name tezos-layer2-store)(allow_empty))
(package (name tezos-layer2-utils-016-PtMumbai))
(package (name tezos-layer2-utils-alpha))
(package (name tezos-lazy-containers))
(package (name tezos-lazy-containers-tests)(allow_empty))
(package (name tezos-lwt-result-stdlib))
(package (name tezos-micheline))
(package (name tezos-micheline-rewriting))
(package (name tezos-mockup))
(package (name tezos-mockup-commands))
(package (name tezos-mockup-proxy))
(package (name tezos-mockup-registration))
(package (name tezos-openapi))
(package (name tezos-p2p))
(package (name tezos-p2p-services))
(package (name tezos-protocol-000-Ps9mPmXa))
(package (name tezos-protocol-001-PtCJ7pwo))
(package (name tezos-protocol-002-PsYLVpVv))
(package (name tezos-protocol-003-PsddFKi3))
(package (name tezos-protocol-004-Pt24m4xi))
(package (name tezos-protocol-005-PsBABY5H))
(package (name tezos-protocol-005-PsBabyM1))
(package (name tezos-protocol-006-PsCARTHA))
(package (name tezos-protocol-007-PsDELPH1))
(package (name tezos-protocol-008-PtEdo2Zk))
(package (name tezos-protocol-008-PtEdoTez))
(package (name tezos-protocol-009-PsFLoren))
(package (name tezos-protocol-010-PtGRANAD))
(package (name tezos-protocol-011-PtHangz2))
(package (name tezos-protocol-012-Psithaca))
(package (name tezos-protocol-013-PtJakart))
(package (name tezos-protocol-014-PtKathma))
(package (name tezos-protocol-015-PtLimaPt))
(package (name tezos-protocol-015-PtLimaPt-tests)(allow_empty))
(package (name tezos-protocol-016-PtMumbai))
(package (name tezos-protocol-016-PtMumbai-tests)(allow_empty))
(package (name tezos-protocol-alpha))
(package (name tezos-protocol-alpha-tests)(allow_empty))
(package (name tezos-protocol-demo-counter))
(package (name tezos-protocol-demo-noops))
(package (name tezos-protocol-environment))
(package (name tezos-protocol-genesis))
(package (name tezos-protocol-plugin-007-PsDELPH1))
(package (name tezos-protocol-plugin-007-PsDELPH1-registerer))
(package (name tezos-protocol-plugin-008-PtEdo2Zk))
(package (name tezos-protocol-plugin-008-PtEdo2Zk-registerer))
(package (name tezos-protocol-plugin-009-PsFLoren))
(package (name tezos-protocol-plugin-009-PsFLoren-registerer))
(package (name tezos-protocol-plugin-010-PtGRANAD))
(package (name tezos-protocol-plugin-010-PtGRANAD-registerer))
(package (name tezos-protocol-plugin-011-PtHangz2))
(package (name tezos-protocol-plugin-011-PtHangz2-registerer))
(package (name tezos-protocol-plugin-012-Psithaca))
(package (name tezos-protocol-plugin-012-Psithaca-registerer))
(package (name tezos-protocol-plugin-013-PtJakart))
(package (name tezos-protocol-plugin-013-PtJakart-registerer))
(package (name tezos-protocol-plugin-014-PtKathma))
(package (name tezos-protocol-plugin-014-PtKathma-registerer))
(package (name tezos-protocol-plugin-015-PtLimaPt))
(package (name tezos-protocol-plugin-015-PtLimaPt-registerer))
(package (name tezos-protocol-plugin-015-PtLimaPt-tests)(allow_empty))
(package (name tezos-protocol-plugin-016-PtMumbai))
(package (name tezos-protocol-plugin-016-PtMumbai-registerer))
(package (name tezos-protocol-plugin-016-PtMumbai-tests)(allow_empty))
(package (name tezos-protocol-plugin-alpha))
(package (name tezos-protocol-plugin-alpha-registerer))
(package (name tezos-protocol-plugin-alpha-tests)(allow_empty))
(package (name tezos-protocol-updater))
(package (name tezos-proxy))
(package (name tezos-proxy-server-config))
(package (name tezos-requester))
(package (name tezos-rpc))
(package (name tezos-rpc-http))
(package (name tezos-rpc-http-client))
(package (name tezos-rpc-http-client-unix))
(package (name tezos-rpc-http-server))
(package (name tezos-sapling))
(package (name tezos-sc-rollup-node-test)(allow_empty))
(package (name tezos-scoru-wasm))
(package (name tezos-scoru-wasm-durable-snapshot)(allow_empty))
(package (name tezos-scoru-wasm-fast))
(package (name tezos-scoru-wasm-fast-test)(allow_empty))
(package (name tezos-scoru-wasm-helpers))
(package (name tezos-scoru-wasm-test)(allow_empty))
(package (name tezos-scoru-wasm-test-helpers)(allow_empty))
(package (name tezos-shell))
(package (name tezos-shell-benchmarks))
(package (name tezos-shell-context))
(package (name tezos-shell-context-test)(allow_empty))
(package (name tezos-shell-services))
(package (name tezos-signer-backends))
(package (name tezos-signer-services))
(package (name tezos-smart-rollup-016-PtMumbai))
(package (name tezos-smart-rollup-alpha))
(package (name tezos-smart-rollup-layer2-016-PtMumbai))
(package (name tezos-smart-rollup-layer2-alpha))
(package (name tezos-stdlib))
(package (name tezos-stdlib-unix))
(package (name tezos-store))
(package (name tezos-test-helpers))
(package (name tezos-test-helpers-extra))
(package (name tezos-tooling))
(package (name tezos-tps-evaluation))
(package (name tezos-tree-encoding))
(package (name tezos-tree-encoding-test)(allow_empty))
(package (name tezos-tx-rollup-015-PtLimaPt))
(package (name tezos-validation))
(package (name tezos-version))
(package (name tezos-wasmer))
(package (name tezos-webassembly-interpreter))
(package (name tezos-webassembly-interpreter-extra))
(package (name tezos-workers))
(package (name tezt-ethereum)(allow_empty))
(package (name tezt-performance-regression))
(package (name tezt-tezos))
; This file was automatically generated, do not edit.
; Edit file manifest/main.ml instead.
