version: "dev"
opam-version: "2.0"
maintainer: "contact@nomadic-labs.com"
authors: [ "Nomadic Labs" "Ocamlpro" ]
license: "LGPL-2.1-with-OCaml-exception"
homepage: "https://gitlab.com/nomadic-labs/resto"
bug-reports: "https://gitlab.com/nomadic-labs/resto/issues"
dev-repo: "git+https://gitlab.com/nomadic-labs/resto"
synopsis: "A minimal OCaml library for type-safe HTTP/JSON RPCs"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "build" "@runtest_ezresto" "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "dune" {build}
  "uri" {>= "1.9.0" }
  "resto" {= "dev" }
  "resto-json" {= "dev" }
  "lwt" {with-test}
]
