opam-version: "2.0"
name: "json-data-encoding-bson"
synopsis: "Type-safe encoding to and decoding from JSON (bson support)"
maintainer: "contact@nomadic-labs.com"
authors: [ "Nomadic Labs" "Ocamlpro" ]
homepage: "https://gitlab.com/nomadic-labs/json-data-encoding"
bug-reports: "https://gitlab.com/nomadic-labs/json-data-encoding/issues"
license: "MIT"
version: "1.0.0"
dev-repo: "git+https://gitlab.com/nomadic-labs/json-data-encoding"

build: [
  ["dune" "build" "-j" jobs "-p" name]
]

depends: [
  "ocaml" {>= "4.10"}
  "dune" {>= "3.0"}
  "json-data-encoding" {= version }
  "ocplib-endian" {>= "1.0"}
]
