opam-version: "2.0"
name: "json-data-encoding"
synopsis: "Type-safe encoding to and decoding from JSON"
maintainer: "contact@nomadic-labs.com"
authors: [ "Nomadic Labs" "Ocamlpro" ]
homepage: "https://gitlab.com/nomadic-labs/json-data-encoding"
bug-reports: "https://gitlab.com/nomadic-labs/json-data-encoding/issues"
license: "MIT"
version: "1.0.1"
dev-repo: "git+https://gitlab.com/nomadic-labs/json-data-encoding"

build: [
  ["dune" "build" "-j" jobs "-p" name]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.10"}
  "dune" {>= "3.0"}
  "uri" {>= "1.9.0" }
  "hex" {>= "1.3.0"}
  "crowbar" { with-test }
  "alcotest" { with-test }
  "ocamlformat" { = "0.24.1" & with-doc } # not technically a doc dep; modify when with-dev becomes available
  "odoc" { with-doc }
  "js_of_ocaml-compiler" { with-test }
  "conf-npm" { with-test }
]
conflicts: [
  "data-encoding" {!= version}
]
