opam-version: "1.2"
name: "ocplib-resto"
version: "~unreleased"
maintainer: "Grégoire Henry <gregoire.henry@ocamlpro.com>"
authors: "Grégoire Henry <gregoire.henry@ocamlpro.com>"
license: "private"
homepage: "https://gitlab.ocamlpro.com/OCamlPro/ocplib-resto"
bug-reports: "https://gitlab.ocamlpro.com/OCamlPro/ocplib-resto/issues"
depends: [
  "ocamlfind" {build}
  "ocp-build" {build}
  "result"
  "lwt"
  "ocplib-json-typed"
]
build: [make]
dev-repo: "git+https://gitlab.ocamlpro.com/OCamlPro/ocplib-resto"
